# AiAgents

./: .gitignore  README.md
.cursor/rules/: plans-apps-workflow-always.mdc
Apps/agent-hub/: .npmrc  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
Apps/agent-hub/src-tauri/: Cargo.toml  tauri.conf.json
Apps/agent-hub/src-tauri/capabilities/: default.json
Apps/agent-hub/src-tauri/migrations/: 20260404140000_init.sql  20260405000000_hub_batch_202602.sql  20260406120000_skill_weather.sql  20260411140000_skills_display_name.sql  20260411150000_skills_display_name_delegate_tx.sql  20260412120000_remove_honesty_skill.sql  20260412230000_skills_instructions_kind.sql  20260413000000_skills_default_load_list_builtin.sql  20260416000000_conversation_summary_compression.sql  20260416120000_conversation_summary_tail_message.sql  20260418120000_skills_display_name_list_available.sql
Apps/agent-hub/src-tauri/src/: lib.rs
Apps/agent-hub/src-tauri/src/hub/: agents.rs  chat.rs  mod.rs  settings.rs  skill_dispatch.rs  skills.rs
Plans/: 执行方案批次索引.md
Plans/2026040401/: 01-跨平台多Agent协作桌面应用-技术方案.md  执行方案.md  执行方案（已执行）.md
Plans/2026040402/: 01-默认Agent与内置委派Skill.md  02-对话窗口与模型选择.md  执行方案.md
Plans/2026040601/: 01-Agent能力与UI能力库.md  执行方案.md
Plans/2026041101/: 01-UI界面与交互说明（设计交付）.md
Plans/2026041201/: 01-Agent会话中Tools状态与大模型感知（设计讨论）.md  执行方案（已执行）.md  未执行方案.md
Plans/2026041202/: 01-Agent-Skills架构设计.md  02-Anthropic-Agent-Skills对接设计.md  03-Agent-Skills范式-能力系统再设计.md  04-示例Skill-天气查询.md  执行方案（已执行）.md  未执行方案.md
Plans/2026041301/: 01-自上一批次未执行项.md  05-长对话与Skills状态一致性-缓解设计.md  (+2 more)
(+15 files in other folders)
